--- a/SpringPersistence-Demo/pom.xml
+++ b/SpringPersistence-Demo/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.5.RELEASE</version>
+        <version>2.1.8.RELEASE</version>
         <relativePath />
     </parent>
     <dependencies>
@@ -24,6 +24,11 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
+            <version>2.2.3</version>
         </dependency>
     </dependencies>
 </project>
